5cc9c2f4e0becab92b6f851032e11261c3f58848/css/qians-first-project-5bbb7a.webflow.css
@import "summer.css";
.utility-page-wrap {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100vw;
  height: 100vh;
  max-height: 100%;
  max-width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.utility-page-content {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 260px;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
}

.utility-page-form {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.button-solid {
  position: relative;
  display: inline-block;
  width: 90%;
  height: 50px;
  padding-top: 15px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  -ms-grid-row-align: center;
  align-self: center;
  -webkit-box-ordinal-group: 2;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  -webkit-box-flex: 0;
  -webkit-flex: 0 auto;
  -ms-flex: 0 auto;
  flex: 0 auto;
  border-style: none;
  border-width: 1px;
  border-color: #000;
  border-radius: 30px;
  /*background-color: hsla(347.44186046511624, 83.50%, 59.61%, 1.00);
  background-image: linear-gradient(186deg, #ee4266, #e2c8e9); */
  color: #fff;
  font-size: 20px;
  text-align: center;
}

.button-solid.button-red {
  background-color: #EE4266;
}

.button-solid.button-blue {
  background-color: #2047AD;
}

.button-solid.button-purple {
  background-color: #9477D1;
}

.button-solid.button-gradient-blue {
  background-color: #1c1259;
  background-image: repeating-linear-gradient(143deg, #3e5ab6, #45bfbf);
}

.button-solid.button-gradient-blue.button-next {
  width: 200px;
  height: 40px;
  padding-top: 0px;
  font-size: 16px;
  line-height: 2.5em;
}

.button-solid.orange {
  width: 200px;
  max-width: 80%;
  border: 2px solid #ff9b00;
  background-color: #fff;
  background-image: none;
  color: hsla(36.470588235294116, 100.00%, 50.00%, 1.00);
}

.button-solid.red-border {
  width: 200px;
  max-width: 80%;
  border: 2px solid #EE4266;
  background-color: #fff;
  background-image: none;
  color: hsla(347, 83%, 60%, 1.00);
}

.na-section {
  display: flex;
  justify-content: center;
  position: relative;
  z-index: 1;
  width: 100%;
  height: auto;
}

.na-section.homepage-banner {
  height: 400px;
  background-image: url('../images/homepage/banner-bg.png');
  background-size: cover;
  color: #fff;
}

.na-section.bg-light-purple {
  position: relative;
  z-index: 0;
  margin-top: -98px;
  padding-top: 124px;
  background-color: #FAFAFD;
}

#banner-content .subtitle {
  padding-top: 140px;
  color: #fff;
}

.subtitle {
  padding-top: 100px;
  font-size: var(--font-label);
  color: grey;
}

.hp-banner-title {
  position: relative;
  z-index: 2;
  display: block;
  margin-top: 20px;
  margin-left: 0px;
  font-size: var(--font-page-title);
  line-height: 2em;
  font-style: normal;
  font-weight: 600;
  text-align: left;
}

.body {
  max-width: none;
  padding-right: 0%;
  padding-left: 0%;
  color: #333;
  font-size: 16px;
  line-height: 1em;
}

.hp-banner-paragraph {
  width: 55%;
  margin-top: 20px;
  font-size: var(--font-body);
  line-height: 150%;
  font-weight: 300;
}

.banner-img {
  position: relative;
  align-self: flex-end;
  top: -150px;
  width: 400px;
  height: auto;
}

.div-centered-v {
  width: 68vw;
  max-width: 1100px;
  min-width: 800px;
  display: flex;
  flex-direction: column;
}

.div-centered-v.noedge {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 0%;
  padding-left: 0%;
}

.homepage-subtitle {
  position: static;
  padding-top: 60px;
  color: #969696;
  font-size: 16px;
}


.hp-title {
  padding-top: 10px;
  line-height: 1em;
  font-size: var(--font-title);
}

.columns {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  margin-top: 20px;
  margin-bottom: 0px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: start;
  -webkit-align-items: flex-start;
  -ms-flex-align: start;
  align-items: flex-start;
  opacity: 1;
}

.body-paragraph {
  margin-top: 20px;
  margin-bottom: 30px;
  color: #333;
  font-size: 16px;
  line-height: 2em;
}

.column {
  margin-top: 40px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  -ms-grid-row-align: stretch;
  align-self: stretch;
  -webkit-box-flex: 0;
  -webkit-flex: 0 auto;
  -ms-flex: 0 auto;
  flex: 0 auto;
}

.column-2 {
  margin-top: 40px;
  border: 1px none #000;
}

.column-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 40px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  border: 1px none #000;
}
/* ... */

